--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,14 @@
     "from sqlalchemy import create_engine\n",
     "import psycopg2\n",
     "\n",
-    "# from config import db_password\n",
+    "from config import db_password\n",
     "\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
     "    running_time_extract = running_time.str.extract(r'(\\d+)\\s*ho?u?r?s?\\s*(\\d*)|(\\d+)\\s*m')\n",
     "    running_time_extract = running_time_extract.apply(lambda col: pd.to_numeric(col, errors='coerce')).fillna(0)\n",
     "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\n",
-    "    \n",
+    "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\n",
     "             \n",
     "    # 2. Clean the Kaggle metadata.\n",
     "    kaggle_metadata = kaggle_metadata[kaggle_metadata['adult'] == 'False'].drop('adult',axis='columns')\n",
@@ -237,7 +237,8 @@
     "    \n",
     "    # 3. Merged the two DataFrames into the movies DataFrame.\n",
     "    movies_df = pd.merge(wiki_movies_df, kaggle_metadata, on='imdb_id', suffixes=['_wiki','_kaggle'])\n",
-    "\n",
+    "    print(len(movies_df))\n",
+    "    \n",
     "    # 4. Drop unnecessary columns from the merged DataFrame.\n",
     "    movies_df.drop(columns=['title_wiki','release_date_wiki','Language','Production company(s)'], inplace=True)\n",
     "\n",
@@ -289,13 +290,31 @@
     "    \n",
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n",
     "    \n",
+    "    #Deliv4 Step#2 Remove the return statement\n",
+    "    #return wiki_movies_df, movies_with_ratings_df, movies_df\n",
     "    \n",
-    "    return wiki_movies_df, movies_with_ratings_df, movies_df\n"
+    "    #Deliv4 Step#3\n",
+    "    db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\"\n",
+    "    engine = create_engine(db_string)\n",
+    "    \n",
+    "    movies_df.to_sql(name='movies', con=engine, if_exists='replace')\n",
+    "    \n",
+    "    rows_imported = 0\n",
+    "# get the start_time from time.time()\n",
+    "    start_time = time.time()\n",
+    "    for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "        print(data)\n",
+    "        data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "        rows_imported += len(data)\n",
+    "\n",
+    "        # add elapsed time to final print out\n",
+    "        print(f'Done. {time.time() - start_time} total seconds elapsed')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +330,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6077\n",
+      "importing rows 0 to 1000000...        userId  movieId  rating   timestamp\n",
+      "0            1      110     1.0  1425941529\n",
+      "1            1      147     4.5  1425942435\n",
+      "2            1      858     5.0  1425941523\n",
+      "3            1     1221     5.0  1425941546\n",
+      "4            1     1246     5.0  1425941556\n",
+      "...        ...      ...     ...         ...\n",
+      "999995   10183      380     4.0   833459432\n",
+      "999996   10183      381     4.0   833460156\n",
+      "999997   10183      410     3.0   833459559\n",
+      "999998   10183      415     4.0   833460564\n",
+      "999999   10183      419     2.0   833461026\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 176.6121699810028 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...         userId  movieId  rating   timestamp\n",
+      "1000000   10183      420     3.0   833459603\n",
+      "1000001   10183      421     3.0   833460615\n",
+      "1000002   10183      422     4.0   833461576\n",
+      "1000003   10183      433     4.0   833460968\n",
+      "1000004   10183      434     4.0   833459509\n",
+      "...         ...      ...     ...         ...\n",
+      "1999995   20808    69122     4.0  1258758055\n",
+      "1999996   20808    69640     3.0  1248641618\n",
+      "1999997   20808    69757     5.0  1258756389\n",
+      "1999998   20808    70286     4.5  1258756286\n",
+      "1999999   20808    71282     3.0  1258756325\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 336.444983959198 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...         userId  movieId  rating   timestamp\n",
+      "2000000   20808    71535     4.5  1258757070\n",
+      "2000001   20808    73017     4.5  1284931448\n",
+      "2000002   20808    74458     4.5  1284931826\n",
+      "2000003   20808    76251     4.0  1284931383\n",
+      "2000004   20808    77561     1.5  1284932264\n",
+      "...         ...      ...     ...         ...\n",
+      "2999995   31331     1485     4.0   867662780\n",
+      "2999996   31331     1544     5.0   867662780\n",
+      "2999997   31331     1573     4.0   867663188\n",
+      "2999998   31332      968     4.0   974205034\n",
+      "2999999   31332     1197     4.0   974205170\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 476.29846692085266 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...         userId  movieId  rating   timestamp\n",
+      "3000000   31332     1210     4.0   974205261\n",
+      "3000001   31332     1821     3.0   974205170\n",
+      "3000002   31332     2782     3.0   974205034\n",
+      "3000003   31332     3121     3.0   974205261\n",
+      "3000004   31332     3249     4.0   974205034\n",
+      "...         ...      ...     ...         ...\n",
+      "3999995   41578     3175     5.0  1134007770\n",
+      "3999996   41578     3219     4.0  1134007516\n",
+      "3999997   41578     3253     4.5  1134008194\n",
+      "3999998   41578     3254     3.0  1134007536\n",
+      "3999999   41578     3300     4.0  1134007927\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 603.6282007694244 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...         userId  movieId  rating   timestamp\n",
+      "4000000   41578     3354     4.0  1134007524\n",
+      "4000001   41578     3421     4.5  1134008066\n",
+      "4000002   41578     3526     4.0  1134008192\n",
+      "4000003   41578     3527     4.5  1134007752\n",
+      "4000004   41578     3535     3.5  1134007456\n",
+      "...         ...      ...     ...         ...\n",
+      "4999995   51433      661     5.0  1394863273\n",
+      "4999996   51433      783     4.0  1394863276\n",
+      "4999997   51433     1035     0.5  1394863180\n",
+      "4999998   51433     1320     5.0  1394863183\n",
+      "4999999   51433     1372     3.0  1394863281\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 727.1563730239868 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...         userId  movieId  rating   timestamp\n",
+      "5000000   51433     1376     4.0  1394863191\n",
+      "5000001   51433     1408     5.0  1394863231\n",
+      "5000002   51433     1544     5.0  1394863493\n",
+      "5000003   51433     1590     5.0  1394863442\n",
+      "5000004   51433     1608     5.0  1394863433\n",
+      "...         ...      ...     ...         ...\n",
+      "5999995   61768     3317     3.5  1438075483\n",
+      "5999996   61768     3753     3.0  1438075487\n",
+      "5999997   61768     3793     4.0  1435694368\n",
+      "5999998   61768     3868     4.0  1438075493\n",
+      "5999999   61768     3869     3.5  1438075491\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 860.4991059303284 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...         userId  movieId  rating   timestamp\n",
+      "6000000   61768     3967     4.0  1438075492\n",
+      "6000001   61768     3977     3.0  1435693148\n",
+      "6000002   61768     3986     3.0  1438075482\n",
+      "6000003   61768     3988     3.0  1438075496\n",
+      "6000004   61768     4014     3.5  1438075486\n",
+      "...         ...      ...     ...         ...\n",
+      "6999995   72206      881     3.0   859544062\n",
+      "6999996   72206      885     2.0   859544194\n",
+      "6999997   72206      891     2.0   859543674\n",
+      "6999998   72206      892     3.0   859544157\n",
+      "6999999   72206      893     3.0   859544422\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 993.8746979236603 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...         userId  movieId  rating   timestamp\n",
+      "7000000   72206      896     5.0   859544376\n",
+      "7000001   72206      897     4.0   859546225\n",
+      "7000002   72206      898     5.0   859545331\n",
+      "7000003   72206      899     5.0   859545421\n",
+      "7000004   72206      900     5.0   859546059\n",
+      "...         ...      ...     ...         ...\n",
+      "7999995   82484     5500     3.5  1112390685\n",
+      "7999996   82484     5506     3.5  1112398417\n",
+      "7999997   82484     5522     3.0  1112399978\n",
+      "7999998   82484     5523     3.0  1112391906\n",
+      "7999999   82484     5548     3.0  1112390553\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n",
+      "Done. 1142.1951179504395 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...         userId  movieId  rating   timestamp\n",
+      "8000000   82484     5553     2.5  1112397875\n",
+      "8000001   82484     5568     3.0  1119881317\n",
+      "8000002   82484     5574     3.0  1112399692\n",
+      "8000003   82484     5580     2.5  1112340611\n",
+      "8000004   82484     5621     3.0  1112390588\n",
+      "...         ...      ...     ...         ...\n",
+      "8999995   92883     1079     4.0  1125290411\n",
+      "8999996   92883     1084     3.5  1125291556\n",
+      "8999997   92883     1086     4.0  1125289812\n",
+      "8999998   92883     1089     3.5  1125290927\n",
+      "8999999   92883     1090     2.5  1125286782\n",
+      "\n",
+      "[1000000 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
     "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
